@@ -40,6 +40,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.7.48" date="2021-03-08">
+      <description>
+	<p>updated user's handbook chapter 2.</p>
+      </description>
+    </release>
+
     <release version="3.7.47" date="2021-03-07">
       <description>
 	<p>minor improvements.</p>
