@@ -1,3 +1,8 @@
+ags (3.7.48)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* updated user's handbook chapter 2 Docbook XML file
+
 ags (3.7.47)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
